tests/baselines/reference/NonInitializedExportInInternalModule(strict=true).errors.txt
NonInitializedExportInInternalModule.ts(2,8): error TS1123: Variable declaration list cannot be empty.
NonInitializedExportInInternalModule.ts(3,5): error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
NonInitializedExportInInternalModule.ts(3,5): error TS2304: Cannot find name 'let'.
NonInitializedExportInInternalModule.ts(4,10): error TS1123: Variable declaration list cannot be empty.
NonInitializedExportInInternalModule.ts(6,16): error TS7005: Variable 'a' implicitly has an 'any' type.
NonInitializedExportInInternalModule.ts(7,16): error TS7005: Variable 'b' implicitly has an 'any' type.
NonInitializedExportInInternalModule.ts(15,27): error TS7005: Variable 'b' implicitly has an 'any' type.
NonInitializedExportInInternalModule.ts(16,20): error TS7005: Variable 'x' implicitly has an 'any' type.
NonInitializedExportInInternalModule.ts(16,23): error TS7005: Variable 'y' implicitly has an 'any' type.
NonInitializedExportInInternalModule.ts(16,26): error TS7005: Variable 'z' implicitly has an 'any' type.
NonInitializedExportInInternalModule.ts(20,27): error TS7005: Variable 'b' implicitly has an 'any' type.
NonInitializedExportInInternalModule.ts(21,20): error TS7005: Variable 'x' implicitly has an 'any' type.
NonInitializedExportInInternalModule.ts(21,23): error TS7005: Variable 'y' implicitly has an 'any' type.
NonInitializedExportInInternalModule.ts(21,26): error TS7005: Variable 'z' implicitly has an 'any' type.


==== NonInitializedExportInInternalModule.ts (14 errors) ====
    module Inner {
        var;
           
!!! error TS1123: Variable declaration list cannot be empty.
        let;
        ~~~
!!! error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
        ~~~
!!! error TS2304: Cannot find name 'let'.
        const;
             
!!! error TS1123: Variable declaration list cannot be empty.
        
        export var a;
                   ~
!!! error TS7005: Variable 'a' implicitly has an 'any' type.
        export let b;
                   ~
!!! error TS7005: Variable 'b' implicitly has an 'any' type.
        export var c: string;
        export let d: number;
        class A {}
        export var e: A;
        export let f: A;
        
        namespace B {
            export let a = 1, b, c = 2;
                              ~
!!! error TS7005: Variable 'b' implicitly has an 'any' type.
            export let x, y, z;
                       ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
                          ~
!!! error TS7005: Variable 'y' implicitly has an 'any' type.
                             ~
!!! error TS7005: Variable 'z' implicitly has an 'any' type.
        }
        
        module C {
            export var a = 1, b, c = 2;
                              ~
!!! error TS7005: Variable 'b' implicitly has an 'any' type.
            export var x, y, z;
                       ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
                          ~
!!! error TS7005: Variable 'y' implicitly has an 'any' type.
                             ~
!!! error TS7005: Variable 'z' implicitly has an 'any' type.
        }
        
        // Shouldn't be filtered
        export var a1 = 1;
        export let b1 = 1;
        export var c1: string = 'a';
        export let d1: number = 1;
        class D {}
        export var e1 = new D;
        export let f1 = new D;
        export var g1: D = new D;
        export let h1: D = new D;
    }